# databricks-claude-gateway

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.example.json  pyproject.toml
admin/: configure_gateway.py  setup_endpoint.py  setup_federation.py
config/: settings.py
credential_helper/: __main__.py  azure_ad_auth.py  token_cache.py  token_exchange.py
installer/: install.sh
launcher/: launch_claude.py  launch_claude.sh
tests/: conftest.py  test_azure_ad_auth.py  test_config.py  test_token_cache.py  test_token_exchange.py
