[project]
name = "databricks-claude-gateway"
version = "0.1.0"
description = "Claude Code integration with Databricks AI Gateway via OAuth Token Federation"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "msal>=1.28",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
